# vectorize

./: .gitignore  README.md  pyproject.toml
src/vectorize/: cli.py  colors.py  pipeline.py  preprocessing.py  svg_processing.py
src/vectorize.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_cli.py  test_pipeline.py  test_preprocessing.py  test_svg_processing.py
